<resources>
    <string name="app_name">AppBase</string>
    <string name="title_activity_maps">AppBase</string>
    <string name="title_activity_inicio_sesion">AppBase</string>

    <string name="hello_world">AsisTAn\nUNICEN\nUniversidad y Transporte</string>
    <string name="action_settings">Settings</string>
    <string name="ingrese_usuario">Ingrese su nombre de usuario</string>
    <string name="ingrese_contrasenia">Ingrese su contraseña</string>
    <string name="text_nombre_app">Asistente Inteligente para la Planificación del Transporte Urbano</string>
    <string name="button_crear_cuenta"> ¿Sos nuevo? ¡Registrate!</string>
    <string name="ubicacion">Ubicación</string>

    <string name="title_activity_registro">RegistroActivity</string>
    <string name="email_hint">Ingrese su e-mail</string>
    <string name="usuario_hint">Ingrese su nombre de usuario</string>
    <string name="contrasenia1_hint">Ingrese su contraseña</string>
    <string name="contrasenia2_hint">Vuelva a ingresar su contraseña</string>
    <string name="button_registro">Registrarme</string>
    <string name="title_activity_pantalla_inicio">PantallaInicioActivity</string>
    <string name="item_reportar_corte">"Reportar Corte"</string>
    <string name="item_obtener_cortes_distancia">Visualizar Cortes</string>
    <string name="item_obtener_saldo">Obtener Saldo</string>
    <string name="item_obtener_colectivos">Obtener Colectivos</string>
    <string name="item_obtener_parquimetros">Ver Parquimetros</string>
    <string name="boton_cancelar">"Cancelar"</string>
    <string name="boton_enviar">"Enviar"</string>
    <string name="autocomplete_hint">Ingrese lugar o dirección</string>
    <string name="item_puntos_carga">Puntos de carga</string>
    <string name="gps_deshabiliatdo">Su GPS está desactivado, es necesario activarlo para obtener su rutina</string>
    <string name="cargando">Cargando...</string>
    <string name="item_rutinas">Rutinas</string>
    <string name="agregar_rutina">Crear</string>
    <string name="visualizar_rutinas">Rutinas del día</string>
    <string name="filtrar_puntos_estadia_fecha">Donde estuve</string>
    <string name="item_puntos_estadia">Puntos Estadia</string>
    <string name="clasificar_rutinas">Ver por fecha</string>
    <string name="editar_rutinas">Editar</string>
    <string name="entrenar_rutinas">Entrenar</string>
    <string name="item_cortes">Cortes</string>
    <string name="item_SUMO">SUMO</string>
    <string name="item_ruta">Como llego...</string>
    <string name="item_obtener_ruta">Como llego...</string>
    <string name="mi_ubicacion"> Ubicación actual</string>
    <string name="otra_ubicacion">Otra ubicación</string>
    <string name="origen">Seleccione origen:</string>
    <string name="destino">Seleccione destino:</string>
    <string name="puntosConocidos">Puntos de interés</string>
    <string name="ingrese_destino">Dirección destino</string>
    <string name="proxima_actividad">Próxima actividad</string>
    <string name="ver_puntos_estadia">Mis puntos de estadía</string>
    <string name="simulacion_alarma">Simulación alarma</string>

    <string name="boton_no">"No"</string>
    <string name="boton_si">"Si"</string>
    <string-array name="visualizar_cortes_array">
        <item>Otro</item>
        <item>Distancia</item>
    </string-array>

    <string-array name="visualizar_colectivos">
        <item>Linea 500</item>
        <item>Linea 501</item>
        <item>Linea 502</item>
        <item>Linea 503</item>
        <item>Linea 504</item>
        <item>Linea 505</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="nuevo_punto_estadia">Agregar punto de estadía</string>
    <string name="blank_fragment">Punto de estadía</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>

    <string name="fecha_inicio_estadia">Fecha inicio</string>
    <string name="hora_inicio_estadia">Hora inicio</string>
    <string name="punto_intermedio_rutina">Punto intermedio</string>
    <string name="fecha_fin_estadia">Fecha fin</string>
    <string name="hora_fin_estadia">Hora fin</string>
    <string name="repite_rutina">Repite zona</string>
    <string name="nombre_estadia">Nombre</string>

    <string name="detalle">Detalle</string>
    <string name="destino_rutina">Origen-Destino</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="dias_semana">
        <item>L</item>
        <item>M</item>
        <item>M</item>
        <item>J</item>
        <item>V</item>
        <item>S</item>
        <item>D</item>

    </string-array>

    <string name="nro_sumo">Ingrese su Numero de Tarjeta Sumo</string>



    <string name="title_activity_show_geofence_transitions">ShowGeofenceTransitionsActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">hs de llegar al </string>
    <string name="geofence_transition_exited">hs de irse del </string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">Clic para volver a la aplicacion</string>

    <string name="account_type">Tipo Cuenta</string>
    <string name="title_activity_rutinas">Mis Rutinas</string>
    <string name="puntos_estadia">Puntos Estadia</string>
    <string name="hora_inicio">Hora de salida:</string>
    <string name="hora_fin">Hora de fin:</string>

    <string-array name="puntos_conocidos">
        <item>Trabajo</item>
        <item>Casa</item>
        <item>Ingles</item>

    </string-array>
    <string name="title_activity_gestor_rutinas">GestorRutinasActivity</string>

    <string name="feedback_usuario">¿Es correcta la próxima actividad?</string>
</resources>
