<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/borde_personalizado"
    android:orientation="vertical"
    android:weightSum="1"
    style="@android:style/Theme.Black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:weightSum="1"
        style="@android:style/Theme.Black"
        android:layout_weight="0.43">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_reportar_corte"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold|normal"
            android:textSize="32dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/borde_personalizado">

            <GridView
                android:layout_width="wrap_content"
                android:layout_height="86dp"
                android:id="@+id/gridView"
                android:numColumns="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ubicacion"
                android:layout_gravity="center_horizontal"
                android:textStyle="normal|italic"
                android:textSize="18dp"
                android:id="@+id/textView" />

            <GridView
                android:layout_width="wrap_content"
                android:layout_height="86dp"
                android:id="@+id/gridViewUbicacion"
                android:numColumns="2"
                android:background="@drawable/borde_personalizado" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_cancelar"
                android:id="@+id/boton_cerrar"
                android:layout_weight="0.25"
                android:background="@drawable/borde_personalizado" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_enviar"
                android:id="@+id/boton_enviar"
                android:layout_weight="0.25"
                android:layout_gravity="right"
                android:background="@drawable/borde_personalizado" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>