<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="transporte.appbase.InicioSesionActivity"
    android:background="@android:color/holo_green_light"
    android:focusableInTouchMode="false">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/iconapp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextUsuarioLogin"
        android:phoneNumber="false"
        android:hint="@string/ingrese_usuario"
        android:layout_above="@+id/editTextContraseniaLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextContraseniaLogin"
        android:hint="@string/ingrese_contrasenia"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextUsuarioLogin"
        android:layout_alignEnd="@+id/editTextUsuarioLogin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextNombreApp"
        android:layout_alignTop="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:editable="false"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/text_nombre_app" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Iniciar sesión"
        android:id="@+id/buttonIniciarSesion"
        android:layout_below="@+id/editTextContraseniaLogin"
        android:layout_centerHorizontal="true" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/Base.Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_crear_cuenta"
        android:id="@+id/buttonCrearCuenta"
        android:layout_below="@+id/buttonIniciarSesion"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:focusable="false"
        android:background="@android:color/transparent"
        android:onClick="crearRegistro" />

</RelativeLayout>
