<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/borde_personalizado"
    android:orientation="vertical"
    android:weightSum="1"
    style="@android:style/Theme.Black"
    android:focusable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:weightSum="1"
        style="@android:style/Theme.Black"
        android:layout_weight="0.62">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_usuario"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold|normal"
            android:textSize="26dp" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ingles"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold|normal"
                android:textSize="16dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextRutina"
            android:visibility="visible"
        />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_no"
                android:id="@+id/boton_no"
                android:layout_weight="0.25"
                android:background="@drawable/borde_personalizado" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_si"
                android:id="@+id/boton_si"
                android:layout_weight="0.25"
                android:layout_gravity="right"
                android:background="@drawable/borde_personalizado" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>